set fixed size to columns and rows of board

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .board {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 128px);
+    grid-template-rows: repeat(3, 128px);
 }
