--- a/style.css
+++ b/style.css
@@ -12,6 +12,13 @@ body {
     background-color: var(--color-leaf);
 }
 
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .board {
     display: grid;
     grid-template-columns: repeat(3, 128px);
