--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 :root {
     --color-moss-green: #5D8736;
     --color-leaf: #809D3C;
     --color-light-olive: #A9C46C;
     --color-greenish-yellow: #F4FFC3;
     --color-white: #ffffff;
+
+    font-family: "Roboto", sans-serif;
 }
 
 body {
