--- a/style.css
+++ b/style.css
@@ -27,7 +27,8 @@ body {
     display: grid;
     grid-template-columns: repeat(3, 128px);
     grid-template-rows: repeat(3, 128px);
-    gap: 1px;
+
+    box-shadow: var(--color-greenish-yellow) 0px 3px 8px;
 }
 
 .cell {
