--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
     --color-greenish-yellow: #F4FFC3;
     --color-white: #ffffff;
 
+    --cell-border-radius: 8px;
+
     font-family: "Roboto", sans-serif;
 }
 
@@ -29,7 +31,7 @@ body {
     grid-template-rows: repeat(3, 128px);
 
     box-shadow: var(--color-greenish-yellow) 0px 3px 8px;
-    border-radius: 6px;
+    border-radius: var(--cell-border-radius);
 }
 
 .cell {
@@ -43,17 +45,17 @@ body {
 }
 
 .cell:nth-child(1) {
-    border-top-left-radius: 6px;
+    border-top-left-radius: var(--cell-border-radius);
 }
 
 .cell:nth-child(3) {
-    border-top-right-radius: 6px;
+    border-top-right-radius: var(--cell-border-radius);
 }
 
 .cell:nth-child(7) {
-    border-bottom-left-radius: 6px;
+    border-bottom-left-radius: var(--cell-border-radius);
 }
 
 .cell:nth-child(9) {
-    border-bottom-right-radius: 6px;
+    border-bottom-right-radius: var(--cell-border-radius);
 }
