--- a/style.css
+++ b/style.css
@@ -63,3 +63,10 @@ body {
 .cell:nth-child(9) {
     border-bottom-right-radius: var(--cell-border-radius);
 }
+
+.result-container {
+    margin-top: 24px;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: var(--color-white);
+}
