--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ body {
 .cell {
     border: 1px solid var(--color-white);
     font-size: 2rem;
+    font-weight: lighter;
     color: var(--color-white);
 
     display: flex;
