--- a/style.css
+++ b/style.css
@@ -49,6 +49,11 @@ body {
     align-items: center;
 }
 
+.cell:hover {
+    transition-duration: .25s;
+    transform: scale(1.1);
+}
+
 .cell:nth-child(1) {
     border-top-left-radius: var(--cell-border-radius);
 }
